Fixed entity preview alignment bugs.

--- a/includes/ts_ck_entity_embed.css
+++ b/includes/ts_ck_entity_embed.css
@@ -45,7 +45,6 @@
     height: 460px;
     margin: 50px auto 0 auto;
     overflow: auto;
-    width: 800px;
 }
 
 .ts-ck-entity-embed-right,
@@ -76,5 +75,10 @@
     float: right;
     margin: 2em 0 2em 2em;
     max-width: 28%;
+  }
+
+  #ts-ck-entity-embed-preview-box .ts-ck-entity-embed-left,
+  #ts-ck-entity-embed-preview-box .ts-ck-entity-embed-right {
+    max-width: none !important;
   }
 }
